fix jumping kid

--- a/web-app/css/public.css
+++ b/web-app/css/public.css
@@ -154,7 +154,7 @@ img#contentFooterBR {
 
 img#kid {
   position:relative;
-  bottom:369px;
+  bottom:173px;
   left:514px;
 }
 
